# CleanCodeReviewer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: tests.yml
clean_code_reviewer/: __init__.py  __main__.py  cli.py
clean_code_reviewer/adapters/: __init__.py  ci_runner.py  mcp_server.py
clean_code_reviewer/core/: __init__.py  llm_client.py  order_manager.py  prompt_builder.py  rules_engine.py  rules_manager.py
clean_code_reviewer/core/reviewers/: __init__.py  base.py  claudecode_reviewer.py  cli_reviewer_base.py  codex_reviewer.py  factory.py  gemini_reviewer.py  litellm_reviewer.py
clean_code_reviewer/tui/: __init__.py  config_app.py  init_app.py  order_app.py
clean_code_reviewer/utils/: __init__.py  config.py  detection.py  file_ops.py  file_selector.py  logger.py
docs/: .gitignore  PRD.md  cursor-hooks-mcp.md  cursor-hooks.md  gemini-review.md  linting.md  opencode-hooks-mcp.md  rule-hierarchy.md  trae-hooks-mcp.md
tests/: conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_file_ops.py  test_prompt_builder.py  test_rules_engine.py
